# dhb

./: .clang-format  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
.github/workflows/: ci.yml
include/dhb/: batcher.h  block.h  buckets.h  dynamic_hashed_blocks.h  graph.h  hash_tools.h  integer_log2.h  submatrix.h  vec.h
src/: buckets.cpp  dynamic_hashed_blocks.cpp  graph.cpp
test/: block.cpp  graph_io.cpp  graph_io.h  matrix.cpp  matrix_test.cpp  submatrix.cpp  vec.cpp
test/graphs/: READ.me  bio-celegans.mtx
